--- a/Demo/Info.plist
+++ b/Demo/Info.plist
@@ -20,6 +20,12 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>位置</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>位置</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>位置</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
